[gd_scene load_steps=20 format=3 uid="uid://c35wulwk6e3b4"]

[ext_resource type="Script" path="res://scenes/characters/player.gd" id="1_1gu75"]
[ext_resource type="Script" path="res://scripts/player_components/AttackComponent.gd" id="2_3w6lg"]
[ext_resource type="Script" path="res://scripts/StateMachine.gd" id="2_dps1t"]
[ext_resource type="Texture2D" uid="uid://bm71lln6lsmlc" path="res://assets/sprite_characters/knight_spritesheet.png" id="2_heryt"]
[ext_resource type="Texture2D" uid="uid://df4r12vpxwua7" path="res://assets/sprite_other/DashDirectionIndicator.png" id="2_mciek"]
[ext_resource type="Script" path="res://scripts/player_components/DirectionIndicator.gd" id="3_h0ap5"]
[ext_resource type="Script" path="res://scripts/player_states/PlayerIdle.gd" id="6_bimax"]
[ext_resource type="Script" path="res://scripts/player_states/PlayerMove.gd" id="7_fakih"]

[sub_resource type="AtlasTexture" id="AtlasTexture_skuxk"]
atlas = ExtResource("2_heryt")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0yad"]
atlas = ExtResource("2_heryt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpbs3"]
atlas = ExtResource("2_heryt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6faa"]
atlas = ExtResource("2_heryt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywuqk"]
atlas = ExtResource("2_heryt")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sckjg"]
atlas = ExtResource("2_heryt")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bq4l"]
atlas = ExtResource("2_heryt")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5g6s"]
atlas = ExtResource("2_heryt")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_22hb7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_skuxk")
}],
"loop": true,
"name": &"air",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0yad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpbs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6faa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywuqk")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sckjg")
}],
"loop": true,
"name": &"stance",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bq4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5g6s")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_16aye"]
atlas = ExtResource("2_heryt")
region = Rect2(96, 96, 32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c2x3k"]
size = Vector2(12, 20)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("anim_sprite", "direction_indicator")]
collision_layer = 2
script = ExtResource("1_1gu75")
anim_sprite = NodePath("AnimatedSprite2D")
direction_indicator = NodePath("DirectionIndicator")

[node name="AttackComponent" type="Node2D" parent="." node_paths=PackedStringArray("p")]
script = ExtResource("2_3w6lg")
p = NodePath("..")

[node name="firerate" type="Timer" parent="AttackComponent"]
wait_time = 0.1
one_shot = true

[node name="DirectionIndicator" type="Sprite2D" parent="." node_paths=PackedStringArray("p")]
texture = ExtResource("2_mciek")
script = ExtResource("3_h0ap5")
p = NodePath("..")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_22hb7")
animation = &"stance"

[node name="Sprite2D_arm" type="Sprite2D" parent="AnimatedSprite2D"]
position = Vector2(-5, 2)
texture = SubResource("AtlasTexture_16aye")
offset = Vector2(5, -2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3)
shape = SubResource("RectangleShape2D_c2x3k")

[node name="FSM" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_dps1t")
initial_state = NodePath("PlayerIdle")

[node name="PlayerIdle" type="Node" parent="FSM" node_paths=PackedStringArray("p")]
script = ExtResource("6_bimax")
p = NodePath("../..")

[node name="PlayerMove" type="Node" parent="FSM" node_paths=PackedStringArray("p")]
script = ExtResource("7_fakih")
p = NodePath("../..")

[node name="PlayerStance" type="Node" parent="FSM"]
